Issue #28768: Fix implicit declaration of function _setmode. Patch by Masayuki Yamamoto